# Technical-Appendices

./: CITATION.cff  README.md  experiments.py
Papers/No Selves, No Consciousness/: NSNCexp14_randomised_v11_commented.py
Papers/No_Selves_No_Consciousness/: NSNC_Experiments.py
Papers/Optimal_Hypothesis_Weakest_Not_Shortest/: experiment_results.xlsx  experiments.py
Papers/Regret_Is_Weighted_Forgetting/: run_experiment.py  run_experiment_rl.py  test.py  verify_reduction.py
Papers/Spacetime_Bounds_on_Consciousness/: ttgs_simulation.py
STS/STS_v0.8.4/: .gitignore  JOSS_CHECKLIST.md  NOTICE  README.md  paper.md
STS/STS_v0.8.4/docs/: architecture.md  contributing.md  core-concepts.md  index.md  logic.md  provenance.md  (+2 more)
STS/STS_v0.8.5/: CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  mkdocs.yml  paper.bib  pyproject.toml
STS/STS_v0.8.5/docs/: api.md  benchmarks-and-quality.md  glossary.md  heuristics.md  installation.md  learning.md  sat.md
STS/STS_v0.8.5/stacktheory/: __init__.py
STS/STS_v0.8.5/stacktheory/layer1/: bitset.py  logic.py  program.py  vocabulary.py
STS/STS_v0.8.5/stacktheory/layer2/: __init__.py  bitpack.py  dimacs.py  wordbitset.py
STS/STS_v0.8.5/stacktheory/layer3/: __init__.py  evaluator.py  heuristics.py  learning.py  local_search.py  rl_env.py  tasks.py
STS/STS_v0.8.5/stacktheory/layer4/: __init__.py  packed_vocab.py
STS/STS_v0.8.5/stacktheory/layer5/: __init__.py  benchmarks.py  golden.py
STS/STS_v0.8.5/tests/: conftest.py  test_layer3_core.py  test_layer4_core.py  test_layer5_benchmarks_smoke.py  test_layer5_properties.py
(+45 files in other folders)
